--- a/HelpDesk/Views/Shared/_Layout.cshtml
+++ b/HelpDesk/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
 
-                <li class="nav-link" style="color: white;">Help DeskTop Management System</li>
+                <li class="nav-link" style="color: white;">HELP DESKTOP MANAGEMENT SYSTEM</li>
 
             </ul>
 
