--- a/HelpDesk/Views/SystemTasks/Index.cshtml
+++ b/HelpDesk/Views/SystemTasks/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<HelpDesk.Models.SystemCode>
+﻿@model IEnumerable<HelpDesk.Models.SystemTask>
 
 @{
     ViewData["Title"] = "Index";
@@ -7,27 +7,27 @@
 <div class="card rounded-4">
     <div class="card-body">
         <div class="d-flex align-items-center">
-            <h6 class="mb-0">System Code</h6>
+            <h6 class="mb-0">Recent System Tasks</h6>
         </div>
 
         <p>
-            <a class="btn btn-primary" asp-action="Create">Add New System Code</a>
+            <a class="btn btn-primary" asp-action="Create">Add New System Task</a>
         </p>
         <div class="card-body">
             <table id="example1" class="table table-bordered table-striped">
-            <thead>
+    <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Code)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
+                @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CreatedById)
+                @Html.DisplayNameFor(model => model.Parent)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CreatedOn)
+                @Html.DisplayNameFor(model => model.OrderNumber)
             </th>
             <th>View</th>
             <th>Edit</th>
@@ -41,26 +41,22 @@
                 @Html.DisplayFor(modelItem => item.Code)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CreatedBy.FullName)
+                @Html.DisplayFor(modelItem => item.Parent.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CreatedOn)
+                @Html.DisplayFor(modelItem => item.OrderNumber)
             </td>
             <td>
-
-                <a class="btn btn-warning" asp-action="Details" asp-route-id="@item.Id">Details</a>
-
+               <a class="btn btn-warning" asp-action="Details" asp-route-id="@item.Id">Details</a>
             </td>
             <td>
-                <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-
+               <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>  
             </td>
             <td>
-
-                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+               <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
